<resources>
    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">310405193271096</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb310405193271096</string>

    <!-- BOTTOM NAVIGATION ITEMS -->
    <string name="bottom_navigation_map_restaurant_item">Map View</string>
    <string name="bottom_navigation_list_restaurant_item">List View</string>
    <string name="bottom_navigation_workmates_item">Workmates</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Default message user profil -->
    <string name="no_email_found"> </string>
    <string name="no_username_found"> </string>

    <string name="app_name">Go4Lunch</string>
    <string name="app_title">Go4Lunch</string>
    <string name="app_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="restaurant_image_description">Restaurant image</string>
    <string name="logo_image_description">Fork image</string>
    <string name="error_authentification_canceled">Authentification canceled</string>
    <string name="error_no_internet">No internet</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="navigation_header_profil_image_description">User Profil image</string>
    <string name="map_fragment_title">I\'m Hungry!</string>
    <string name="restaurant_fragment_title">I\'m hungry!</string>
    <string name="workmates_fragment_title">Available workmates</string>
    <string name="restaurant_open">Open</string>
    <string name="restaurant_closed">Closed</string>
    <string name="unknown_opening_hours">Not specified</string>
    <string name="text_sing_in_btn">Sign in</string>
    <string name="text_view_mentor_chat_error">This thread does not currently contain any messages&#8230;</string>
    <string name="button_title_mentor_chat_activity">SEND</string>
    <string name="error_not_connected">You must log in !</string>
    <string name="text_input_title_mentor_chat_activity">Compose your message</string>


</resources>
