<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_item"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/bottom_navigation_map_restaurant_item"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_item"
        android:enabled="true"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/bottom_navigation_list_restaurant_item"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/workmates_item"
        android:enabled="true"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/bottom_navigation_workmates_item"
        app:showAsAction="ifRoom"/>

</menu>