<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- BUTTONS CHAT CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/activity_mentor_chat_recycler_view_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <!-- BUTTON CHAT ANDROID -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_android_chat_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:tag="10"
            app:srcCompat="@drawable/ic_android_white_24dp" />

        <!-- BUTTON CHAT FIREBASE -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_firebase_chat_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorSandLight"
            android:tag="20"
            app:srcCompat="@drawable/ic_cloud_white_24dp" />

        <!-- BUTTON CHAT BUG -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_bug_chat_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorSand"
            android:tag="30"
            app:srcCompat="@drawable/ic_bug_report_white_24dp" />

    </LinearLayout>


    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/activity_mentor_chat_add_message_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_mentor_chat_buttons_container">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/activity_mentor_chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:text="@string/text_view_mentor_chat_error"
            android:textAlignment="center" />

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_mentor_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_mentor_chat_recycler_view_container">


        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_mentor_chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_input_title_mentor_chat_activity"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size" />

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/activity_mentor_chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_mentor_chat_activity" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>